www/versioned_docs/version-5.14.1/API/modules.md
---
id: 'modules'
title: 'Starknet.js API - v5.14.1'
sidebar_label: 'Exports'
sidebar_position: 0.5
custom_edit_url: null
---

## Namespaces

- [types](namespaces/types.md)
- [constants](namespaces/constants.md)
- [encode](namespaces/encode.md)
- [hash](namespaces/hash.md)
- [json](namespaces/json.md)
- [num](namespaces/num.md)
- [transaction](namespaces/transaction.md)
- [stark](namespaces/stark.md)
- [merkle](namespaces/merkle.md)
- [uint256](namespaces/uint256.md)
- [shortString](namespaces/shortString.md)
- [typedData](namespaces/typedData.md)
- [ec](namespaces/ec.md)
- [starknetId](namespaces/starknetId.md)
- [provider](namespaces/provider-1.md)
- [selector](namespaces/selector.md)
- [cairo](namespaces/cairo.md)

## Classes

- [Account](classes/Account.md)
- [AccountInterface](classes/AccountInterface.md)
- [Contract](classes/Contract.md)
- [ContractInterface](classes/ContractInterface.md)
- [ContractFactory](classes/ContractFactory.md)
- [Provider](classes/Provider.md)
- [CustomError](classes/CustomError.md)
- [LibraryError](classes/LibraryError.md)
- [GatewayError](classes/GatewayError.md)
- [HttpError](classes/HttpError.md)
- [SequencerProvider](classes/SequencerProvider.md)
- [ProviderInterface](classes/ProviderInterface.md)
- [RpcProvider](classes/RpcProvider.md)
- [SignerInterface](classes/SignerInterface.md)
- [Signer](classes/Signer.md)
- [CallData](classes/CallData.md)

## References

### EstimateFee

Re-exports [EstimateFee](interfaces/types.EstimateFee.md)

---

### EstimateFeeBulk

Re-exports [EstimateFeeBulk](namespaces/types.md#estimatefeebulk)

---

### AccountInvocationsFactoryDetails

Re-exports [AccountInvocationsFactoryDetails](namespaces/types.md#accountinvocationsfactorydetails)

---

### EstimateFeeDetails

Re-exports [EstimateFeeDetails](interfaces/types.EstimateFeeDetails.md)

---

### DeployContractResponse

Re-exports [DeployContractResponse](interfaces/types.DeployContractResponse.md)

---

### MultiDeployContractResponse

Re-exports [MultiDeployContractResponse](namespaces/types.md#multideploycontractresponse)

---

### DeployContractUDCResponse

Re-exports [DeployContractUDCResponse](namespaces/types.md#deploycontractudcresponse)

---

### DeclareDeployUDCResponse

Re-exports [DeclareDeployUDCResponse](namespaces/types.md#declaredeployudcresponse)

---

### SimulateTransactionDetails

Re-exports [SimulateTransactionDetails](namespaces/types.md#simulatetransactiondetails)

---

### SIMULATION_FLAG

Re-exports [SIMULATION_FLAG](enums/types.SIMULATION_FLAG.md)

---

### AsyncContractFunction

Re-exports [AsyncContractFunction](namespaces/types.md#asynccontractfunction)

---

### ContractFunction

Re-exports [ContractFunction](namespaces/types.md#contractfunction)

---

### Result

Re-exports [Result](namespaces/types.md#result)

---

### Calldata

Re-exports [Calldata](namespaces/types.md#calldata)

---

### ArgsOrCalldata

Re-exports [ArgsOrCalldata](namespaces/types.md#argsorcalldata)

---

### ArgsOrCalldataWithOptions

Re-exports [ArgsOrCalldataWithOptions](namespaces/types.md#argsorcalldatawithoptions)

---

### ContractOptions

Re-exports [ContractOptions](namespaces/types.md#contractoptions)

---

### CallOptions

Re-exports [CallOptions](namespaces/types.md#calloptions)

---

### InvokeOptions

Re-exports [InvokeOptions](namespaces/types.md#invokeoptions)

---

### WeierstrassSignatureType

Re-exports [WeierstrassSignatureType](namespaces/types.md#weierstrasssignaturetype)

---

### ArraySignatureType

Re-exports [ArraySignatureType](namespaces/types.md#arraysignaturetype)

---

### Signature

Re-exports [Signature](namespaces/types.md#signature)

---

### BigNumberish

Re-exports [BigNumberish](namespaces/types.md#bignumberish)

---

### Uint256

Re-exports [Uint256](interfaces/types.Uint256.md)

---

### RawCalldata

Re-exports [RawCalldata](namespaces/types.md#rawcalldata)

---

### HexCalldata

Re-exports [HexCalldata](namespaces/types.md#hexcalldata)

---

### AllowArray

Re-exports [AllowArray](namespaces/types.md#allowarray)

---

### OptionalPayload

Re-exports [OptionalPayload](namespaces/types.md#optionalpayload)

---

### RawArgs

Re-exports [RawArgs](namespaces/types.md#rawargs)

---

### RawArgsObject

Re-exports [RawArgsObject](namespaces/types.md#rawargsobject)

---

### RawArgsArray

Re-exports [RawArgsArray](namespaces/types.md#rawargsarray)

---

### MultiType

Re-exports [MultiType](namespaces/types.md#multitype)

---

### UniversalDeployerContractPayload

Re-exports [UniversalDeployerContractPayload](namespaces/types.md#universaldeployercontractpayload)

---

### DeployContractPayload

Re-exports [DeployContractPayload](namespaces/types.md#deploycontractpayload)

---

### DeployAccountContractPayload

Re-exports [DeployAccountContractPayload](namespaces/types.md#deployaccountcontractpayload)

---

### DeployAccountContractTransaction

Re-exports [DeployAccountContractTransaction](namespaces/types.md#deployaccountcontracttransaction)

---

### DeclareContractPayload

Re-exports [DeclareContractPayload](namespaces/types.md#declarecontractpayload)

---

### CompleteDeclareContractPayload

Re-exports [CompleteDeclareContractPayload](namespaces/types.md#completedeclarecontractpayload)

---

### DeclareAndDeployContractPayload

Re-exports [DeclareAndDeployContractPayload](namespaces/types.md#declareanddeploycontractpayload)

---

### DeclareContractTransaction

Re-exports [DeclareContractTransaction](namespaces/types.md#declarecontracttransaction)

---

### CallDetails

Re-exports [CallDetails](namespaces/types.md#calldetails)

---

### Invocation

Re-exports [Invocation](namespaces/types.md#invocation)

---

### Call

Re-exports [Call](namespaces/types.md#call)

---

### CairoVersion

Re-exports [CairoVersion](namespaces/types.md#cairoversion)

---

### InvocationsDetails

Re-exports [InvocationsDetails](namespaces/types.md#invocationsdetails)

---

### Details

Re-exports [Details](namespaces/types.md#details)

---

### InvocationsDetailsWithNonce

Re-exports [InvocationsDetailsWithNonce](namespaces/types.md#invocationsdetailswithnonce)

---

### TransactionStatus

Re-exports [TransactionStatus](enums/types.TransactionStatus.md)

---

### AccountInvocationItem

Re-exports [AccountInvocationItem](namespaces/types.md#accountinvocationitem)

---

### AccountInvocations

Re-exports [AccountInvocations](namespaces/types.md#accountinvocations)

---

### Invocations

Re-exports [Invocations](namespaces/types.md#invocations)

---

### Status

Re-exports [Status](namespaces/types.md#status)

---

### TransactionType

Re-exports [TransactionType](enums/types.TransactionType.md)

---

### Tupled

Re-exports [Tupled](namespaces/types.md#tupled)

---

### BlockTag

Re-exports [BlockTag](namespaces/types.md#blocktag)

---

### BlockNumber

Re-exports [BlockNumber](namespaces/types.md#blocknumber)

---

### BlockIdentifier

Re-exports [BlockIdentifier](namespaces/types.md#blockidentifier)

---

### Struct

Re-exports [Struct](namespaces/types.md#struct)

---

### Args

Re-exports [Args](namespaces/types.md#args)

---

### ParsedStruct

Re-exports [ParsedStruct](namespaces/types.md#parsedstruct)

---

### waitForTransactionOptions

Re-exports [waitForTransactionOptions](namespaces/types.md#waitfortransactionoptions)

---

### getSimulateTransactionOptions

Re-exports [getSimulateTransactionOptions](namespaces/types.md#getsimulatetransactionoptions)

---

### getEstimateFeeBulkOptions

Re-exports [getEstimateFeeBulkOptions](namespaces/types.md#getestimatefeebulkoptions)

---

### CallStruct

Re-exports [CallStruct](interfaces/types.CallStruct.md)

---

### ContractClass

Re-exports [ContractClass](namespaces/types.md#contractclass)

---

### CompiledContract

Re-exports [CompiledContract](namespaces/types.md#compiledcontract)

---

### CairoContract

Re-exports [CairoContract](namespaces/types.md#cairocontract)

---

### EntryPointType

Re-exports [EntryPointType](enums/types.EntryPointType.md)

---

### Abi

Re-exports [Abi](namespaces/types.md#abi)

---

### AbiEntry

Re-exports [AbiEntry](namespaces/types.md#abientry)

---

### FunctionAbi

Re-exports [FunctionAbi](namespaces/types.md#functionabi)

---

### AbiStructs

Re-exports [AbiStructs](namespaces/types.md#abistructs)

---

### StructAbi

Re-exports [StructAbi](namespaces/types.md#structabi)

---

### LegacyContractClass

Re-exports [LegacyContractClass](namespaces/types.md#legacycontractclass)

---

### LegacyCompiledContract

Re-exports [LegacyCompiledContract](namespaces/types.md#legacycompiledcontract)

---

### Builtins

Re-exports [Builtins](namespaces/types.md#builtins)

---

### CompressedProgram

Re-exports [CompressedProgram](namespaces/types.md#compressedprogram)

---

### EntryPointsByType

Re-exports [EntryPointsByType](namespaces/types.md#entrypointsbytype)

---

### ContractEntryPointFields

Re-exports [ContractEntryPointFields](namespaces/types.md#contractentrypointfields)

---

### Program

Re-exports [Program](interfaces/types.Program.md)

---

### CairoAssembly

Re-exports [CairoAssembly](namespaces/types.md#cairoassembly)

---

### CompiledSierra

Re-exports [CompiledSierra](namespaces/types.md#compiledsierra)

---

### SierraContractClass

Re-exports [SierraContractClass](namespaces/types.md#sierracontractclass)

---

### CompiledSierraCasm

Re-exports [CompiledSierraCasm](namespaces/types.md#compiledsierracasm)

---

### ByteCode

Re-exports [ByteCode](namespaces/types.md#bytecode)

---

### PythonicHints

Re-exports [PythonicHints](namespaces/types.md#pythonichints)

---

### SierraProgramDebugInfo

Re-exports [SierraProgramDebugInfo](namespaces/types.md#sierraprogramdebuginfo)

---

### SierraEntryPointsByType

Re-exports [SierraEntryPointsByType](namespaces/types.md#sierraentrypointsbytype)

---

### SierraContractEntryPointFields

Re-exports [SierraContractEntryPointFields](namespaces/types.md#sierracontractentrypointfields)

---

### ProviderOptions

Re-exports [ProviderOptions](interfaces/types.ProviderOptions.md)

---

### RpcProviderOptions

Re-exports [RpcProviderOptions](namespaces/types.md#rpcprovideroptions)

---

### SequencerHttpMethod

Re-exports [SequencerHttpMethod](namespaces/types.md#sequencerhttpmethod)

---

### SequencerProviderOptions

Re-exports [SequencerProviderOptions](namespaces/types.md#sequencerprovideroptions)

---

### GetBlockResponse

Re-exports [GetBlockResponse](interfaces/types.GetBlockResponse.md)

---

### GetCodeResponse

Re-exports [GetCodeResponse](interfaces/types.GetCodeResponse.md)

---

### GetTransactionResponse

Re-exports [GetTransactionResponse](namespaces/types.md#gettransactionresponse)

---

### CommonTransactionResponse

Re-exports [CommonTransactionResponse](interfaces/types.CommonTransactionResponse.md)

---

### InvokeTransactionResponse

Re-exports [InvokeTransactionResponse](interfaces/types.InvokeTransactionResponse.md)

---

### ContractEntryPoint

Re-exports [ContractEntryPoint](interfaces/types.ContractEntryPoint.md)

---

### DeclareTransactionResponse

Re-exports [DeclareTransactionResponse](interfaces/types.DeclareTransactionResponse.md)

---

### GetTransactionReceiptResponse

Re-exports [GetTransactionReceiptResponse](namespaces/types.md#gettransactionreceiptresponse)

---

### CommonTransactionReceiptResponse

Re-exports [CommonTransactionReceiptResponse](interfaces/types.CommonTransactionReceiptResponse.md)

---

### MessageToL1

Re-exports [MessageToL1](interfaces/types.MessageToL1.md)

---

### Event

Re-exports [Event](interfaces/types.Event.md)

---

### MessageToL2

Re-exports [MessageToL2](interfaces/types.MessageToL2.md)

---

### InvokeTransactionReceiptResponse

Re-exports [InvokeTransactionReceiptResponse](interfaces/types.InvokeTransactionReceiptResponse.md)

---

### DeclareTransactionReceiptResponse

Re-exports [DeclareTransactionReceiptResponse](namespaces/types.md#declaretransactionreceiptresponse)

---

### EstimateFeeResponse

Re-exports [EstimateFeeResponse](interfaces/types.EstimateFeeResponse.md)

---

### InvokeFunctionResponse

Re-exports [InvokeFunctionResponse](interfaces/types.InvokeFunctionResponse.md)

---

### DeclareContractResponse

Re-exports [DeclareContractResponse](interfaces/types.DeclareContractResponse.md)

---

### CallContractResponse

Re-exports [CallContractResponse](namespaces/types.md#callcontractresponse)

---

### EstimateFeeAction

Re-exports [EstimateFeeAction](namespaces/types.md#estimatefeeaction)

---

### EstimateFeeResponseBulk

Re-exports [EstimateFeeResponseBulk](namespaces/types.md#estimatefeeresponsebulk)

---

### Storage

Re-exports [Storage](namespaces/types.md#storage)

---

### Nonce

Re-exports [Nonce](namespaces/types.md#nonce)

---

### SimulationFlags

Re-exports [SimulationFlags](namespaces/types.md#simulationflags)

---

### SimulatedTransaction

Re-exports [SimulatedTransaction](namespaces/types.md#simulatedtransaction)

---

### SimulateTransactionResponse

Re-exports [SimulateTransactionResponse](namespaces/types.md#simulatetransactionresponse)

---

### StateUpdateResponse

Re-exports [StateUpdateResponse](interfaces/types.StateUpdateResponse.md)

---

### ContractClassResponse

Re-exports [ContractClassResponse](namespaces/types.md#contractclassresponse)

---

### InvocationsSignerDetails

Re-exports [InvocationsSignerDetails](interfaces/types.InvocationsSignerDetails.md)

---

### DeclareSignerDetails

Re-exports [DeclareSignerDetails](interfaces/types.DeclareSignerDetails.md)

---

### DeployAccountSignerDetails

Re-exports [DeployAccountSignerDetails](namespaces/types.md#deployaccountsignerdetails)

---

### StarkNetMerkleType

Re-exports [StarkNetMerkleType](namespaces/types.md#starknetmerkletype)

---

### StarkNetType

Re-exports [StarkNetType](namespaces/types.md#starknettype)

---

### StarkNetDomain

Re-exports [StarkNetDomain](interfaces/types.StarkNetDomain.md)

---

### TypedData

Re-exports [TypedData](interfaces/types.TypedData.md)

---

### GetTransactionStatusResponse

Re-exports [GetTransactionStatusResponse](namespaces/types.md#gettransactionstatusresponse)

---

### GetContractAddressesResponse

Re-exports [GetContractAddressesResponse](namespaces/types.md#getcontractaddressesresponse)

---

### FunctionInvocation

Re-exports [FunctionInvocation](namespaces/types.md#functioninvocation)

---

### ExecutionResources

Re-exports [ExecutionResources](namespaces/types.md#executionresources)

---

### CallL1Handler

Re-exports [CallL1Handler](namespaces/types.md#calll1handler)

---

### DeployedContractItem

Re-exports [DeployedContractItem](namespaces/types.md#deployedcontractitem)

---

### SequencerIdentifier

Re-exports [SequencerIdentifier](namespaces/types.md#sequenceridentifier)

---

### Sequencer

Re-exports [Sequencer](namespaces/types.Sequencer.md)

---

### RPC

Re-exports [RPC](namespaces/types.RPC.md)

## Variables

### number

• `Const` **number**: [`num`](namespaces/num.md) = `num`

**`Deprecated`**

prefer the 'num' naming

#### Defined in

[src/index.ts:44](https://github.com/starknet-io/starknet.js/blob/v5.14.1/src/index.ts#L44)

---

### defaultProvider

• `Const` **defaultProvider**: [`Provider`](classes/Provider.md)

#### Defined in

[src/provider/index.ts:9](https://github.com/starknet-io/starknet.js/blob/v5.14.1/src/provider/index.ts#L9)

## Functions

### getCalldata

▸ **getCalldata**(`args`, `callback`): [`Calldata`](namespaces/types.md#calldata)

#### Parameters

| Name       | Type                                     |
| :--------- | :--------------------------------------- |
| `args`     | [`RawArgs`](namespaces/types.md#rawargs) |
| `callback` | `Function`                               |

#### Returns

[`Calldata`](namespaces/types.md#calldata)

#### Defined in

[src/contract/default.ts:98](https://github.com/starknet-io/starknet.js/blob/v5.14.1/src/contract/default.ts#L98)

---

### splitArgsAndOptions

▸ **splitArgsAndOptions**(`args`): { `args`: [`ArgsOrCalldata`](namespaces/types.md#argsorcalldata) ; `options`: [`ContractOptions`](namespaces/types.md#contractoptions) } \| { `args`: [`ArgsOrCalldata`](namespaces/types.md#argsorcalldata) ; `options?`: `undefined` }

#### Parameters

| Name   | Type                                                                         |
| :----- | :--------------------------------------------------------------------------- |
| `args` | [`ArgsOrCalldataWithOptions`](namespaces/types.md#argsorcalldatawithoptions) |

#### Returns

{ `args`: [`ArgsOrCalldata`](namespaces/types.md#argsorcalldata) ; `options`: [`ContractOptions`](namespaces/types.md#contractoptions) } \| { `args`: [`ArgsOrCalldata`](namespaces/types.md#argsorcalldata) ; `options?`: `undefined` }

#### Defined in

[src/contract/default.ts:25](https://github.com/starknet-io/starknet.js/blob/v5.14.1/src/contract/default.ts#L25)

---

### fixStack

▸ **fixStack**(`target`, `fn?`): `void`

#### Parameters

| Name     | Type       | Default value        |
| :------- | :--------- | :------------------- |
| `target` | `Error`    | `undefined`          |
| `fn`     | `Function` | `target.constructor` |

#### Returns

`void`

#### Defined in

[src/provider/errors.ts:2](https://github.com/starknet-io/starknet.js/blob/v5.14.1/src/provider/errors.ts#L2)

---

### fixProto

▸ **fixProto**(`target`, `prototype`): `void`

#### Parameters

| Name        | Type     |
| :---------- | :------- |
| `target`    | `Error`  |
| `prototype` | `Object` |

#### Returns

`void`

#### Defined in

[src/provider/errors.ts:8](https://github.com/starknet-io/starknet.js/blob/v5.14.1/src/provider/errors.ts#L8)

---

### addAddressPadding

▸ **addAddressPadding**(`address`): `string`

#### Parameters

| Name      | Type                                               |
| :-------- | :------------------------------------------------- |
| `address` | [`BigNumberish`](namespaces/types.md#bignumberish) |

#### Returns

`string`

#### Defined in

[src/utils/address.ts:10](https://github.com/starknet-io/starknet.js/blob/v5.14.1/src/utils/address.ts#L10)

---

### validateAndParseAddress

▸ **validateAndParseAddress**(`address`): `string`

#### Parameters

| Name      | Type                                               |
| :-------- | :------------------------------------------------- |
| `address` | [`BigNumberish`](namespaces/types.md#bignumberish) |

#### Returns

`string`

#### Defined in

[src/utils/address.ts:14](https://github.com/starknet-io/starknet.js/blob/v5.14.1/src/utils/address.ts#L14)

---

### getChecksumAddress

▸ **getChecksumAddress**(`address`): `string`

#### Parameters

| Name      | Type                                               |
| :-------- | :------------------------------------------------- |
| `address` | [`BigNumberish`](namespaces/types.md#bignumberish) |

#### Returns

`string`

#### Defined in

[src/utils/address.ts:27](https://github.com/starknet-io/starknet.js/blob/v5.14.1/src/utils/address.ts#L27)

---

### validateChecksumAddress

▸ **validateChecksumAddress**(`address`): `boolean`

#### Parameters

| Name      | Type     |
| :-------- | :------- |
| `address` | `string` |

#### Returns

`boolean`

#### Defined in

[src/utils/address.ts:44](https://github.com/starknet-io/starknet.js/blob/v5.14.1/src/utils/address.ts#L44)

---

### isUrl

▸ **isUrl**(`s?`): `boolean`

Loosely validate a URL `string`.

#### Parameters

| Name | Type     |
| :--- | :------- |
| `s?` | `string` |

#### Returns

`boolean`

#### Defined in

[src/utils/url.ts:22](https://github.com/starknet-io/starknet.js/blob/v5.14.1/src/utils/url.ts#L22)

---

### buildUrl

▸ **buildUrl**(`baseUrl`, `defaultPath`, `urlOrPath?`): `string`

#### Parameters

| Name          | Type     |
| :------------ | :------- |
| `baseUrl`     | `string` |
| `defaultPath` | `string` |
| `urlOrPath?`  | `string` |

#### Returns

`string`

#### Defined in

[src/utils/url.ts:51](https://github.com/starknet-io/starknet.js/blob/v5.14.1/src/utils/url.ts#L51)

---

### isSierra

▸ **isSierra**(`contract`): contract is CompiledSierra \| SierraContractClass

#### Parameters

| Name       | Type                                                             |
| :--------- | :--------------------------------------------------------------- |
| `contract` | `string` \| [`CairoContract`](namespaces/types.md#cairocontract) |

#### Returns

contract is CompiledSierra \| SierraContractClass

#### Defined in

[src/utils/contract.ts:14](https://github.com/starknet-io/starknet.js/blob/v5.14.1/src/utils/contract.ts#L14)

---

### extractContractHashes

▸ **extractContractHashes**(`payload`): [`CompleteDeclareContractPayload`](namespaces/types.md#completedeclarecontractpayload)

#### Parameters

| Name      | Type                                                                   |
| :-------- | :--------------------------------------------------------------------- |
| `payload` | [`DeclareContractPayload`](namespaces/types.md#declarecontractpayload) |

#### Returns

[`CompleteDeclareContractPayload`](namespaces/types.md#completedeclarecontractpayload)

#### Defined in

[src/utils/contract.ts:21](https://github.com/starknet-io/starknet.js/blob/v5.14.1/src/utils/contract.ts#L21)

---

### contractClassResponseToLegacyCompiledContract

▸ **contractClassResponseToLegacyCompiledContract**(`ccr`): [`LegacyCompiledContract`](namespaces/types.md#legacycompiledcontract)

Helper to redeclare response Cairo0 contract

#### Parameters

| Name  | Type                                                                 | Description           |
| :---- | :------------------------------------------------------------------- | :-------------------- |
| `ccr` | [`ContractClassResponse`](namespaces/types.md#contractclassresponse) | ContractClassResponse |

#### Returns

[`LegacyCompiledContract`](namespaces/types.md#legacycompiledcontract)

LegacyCompiledContract

#### Defined in

[src/utils/contract.ts:48](https://github.com/starknet-io/starknet.js/blob/v5.14.1/src/utils/contract.ts#L48)

---

### parseUDCEvent

▸ **parseUDCEvent**(`txReceipt`): `Object`

Parse Transaction Receipt Event from UDC invoke transaction and
create DeployContractResponse compatibile response with adition of UDC Event data

#### Parameters

| Name        | Type                                                                                       |
| :---------- | :----------------------------------------------------------------------------------------- |
| `txReceipt` | [`InvokeTransactionReceiptResponse`](interfaces/types.InvokeTransactionReceiptResponse.md) |

#### Returns

`Object`

DeployContractResponse | UDC Event Response data

| Name               | Type       |
| :----------------- | :--------- |
| `transaction_hash` | `string`   |
| `contract_address` | `string`   |
| `address`          | `string`   |
| `deployer`         | `string`   |
| `unique`           | `string`   |
| `classHash`        | `string`   |
| `calldata_len`     | `string`   |
| `calldata`         | `string`[] |
| `salt`             | `string`   |

#### Defined in

[src/utils/events.ts:12](https://github.com/starknet-io/starknet.js/blob/v5.14.1/src/utils/events.ts#L12)
